--- a/apps/dave/.storybook/global.css
+++ b/apps/dave/.storybook/global.css
@@ -1,1 +1,3 @@
-@import '@rainbow-me/rainbowkit/styles.css'
+@import '@rainbow-me/rainbowkit/styles.css';
+@import '@mantine/core/styles.css';
+@import '@mantine/notifications/styles.css';
